# charla-docker

./: .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  cuento.txt  pyproject.toml
example/: cli.py  text_operations.py
tests/: test_ensayo.py  test_text_operations.py
